2009-07-02  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-12-07
	* added table of dqm shm cells and moved resetting of discard flag
	* for dqm up to reflect timing of actions
	
2009-04-09  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-12-06
	* modified FUResource.cc to adapt to change in evtn interface

2009-04-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-12-05
	* patch monitoring() to avoid inter-lock occurences
	* patch actionPerformed() to avoid inter-lock occurences

2009-03-23  Emilio Meschi  <emilio.meschi@cern.ch>
	
	* tag V00-12-04
	* ticket #47784
	* merge mask C and T bits at fedtrailer prior to crc calculation

2009-02-17  Emilio Meschi  <emilio.meschi@cern.ch>
	
	* tag V00-12-03
	* merge from branch at V00-10-05 (gtpe)

2009-02-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-12-02
	* finally fix race condition related to acceptSM*Discard flags,
	which need to be set in a different order (reported by Kurt Biery)
	* correctly handle useEvmBoard parameter (reported by Frank Ma)

2008-11-20  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>

	* tag V00-12-01
	* call fsm_.findRcmsStateListener()
	* requires EventFilter/Utilities V00-15-01

2008-11-03  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-12-00
	* protect against spurious storage manager discards (data & dqm)
	* protect actionPerformed(), monitoring(), watching(),
	customWebPage(), and halting() against access to resourceTable_
	pointer after it has been destroyed (on halting())

2008-10-17  Emilio Meschi  <emilio.meschi@cern.ch>

	* tag V00-10-05
	* added evn from gtpe in branch for online 2_1_X

	
2008-10-14  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-00
	* add Kurt's changes
	* incorporate fuProcessId and fuGuid in message exchange with SM
	* fuID renamed to rbBufferID
	* requires EventFilter/Utilities V00-15-00
	* requires EventFilter/ShmBuffer V00-07-00
	